--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul class="menu-links">
           <li class="icon">  
             <svg width="16" height="12">
-              <use href="../images/icons.svg#icon-envelope"></use>
+              <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
           </li>
           <li class="link-item">
@@ -45,7 +45,7 @@
           </li>
           <li class="icon">
             <svg width="10" height="16">
-              <use href="../images/icons.svg#icon-smartphone"></use>
+              <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
           </li>
           <li class="link-item">
@@ -70,22 +70,22 @@
           <ul class="icons-clients">
             <li class="icon-index">
               <svg width="270" height="120">
-                <use href="../images/icons.svg#icon-antenna"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
               </svg>  
             </li>
             <li class="icon-index">
               <svg width="270" height="120">
-                <use href="../images/icons.svg#icon-clock"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg> 
+            </li>
+            <li class="icon-index">
+              <svg width="270" height="120">
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>  
             </li>
             <li class="icon-index">
               <svg width="270" height="120">
-                <use href="../images/icons.svg#icon-diagram"></use>
-              </svg>  
-            </li>
-            <li class="icon-index">
-              <svg width="270" height="120">
-                <use href="../images/icons.svg#icon-astronaut"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>  
             </li>
             </ul>
@@ -176,23 +176,23 @@
                 <div class="somedia-box">  
                 <ul class="icons">
                   <li class="somedia">
-                    <svg width="10.28" height="10.28">
-                      <use href="../images/icons.svg#icon-instagram"></use>
-                    </svg>  
-                  </li>
-                  <li class="somedia">
-                    <svg width="20" height="16.25">
-                      <use href="../images/icons.svg/icon-twitter"></use>
-                    </svg>  
-                  </li>
-                  <li class="somedia">
-                    <svg width="10" height="20">
-                      <use href="../images/icons.svg#icon-facebook"></use>
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>  
                   </li>
                   <li class="somedia">
                     <svg width="20" height="20">
-                      <use href="../images/icons.svg/icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>  
+                  </li>
+                  <li class="somedia">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>  
+                  </li>
+                  <li class="somedia">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>  
                   </li>
                 </ul> 
@@ -214,23 +214,23 @@
                     <p class="team-position">Frontend Designer</p> 
                   <ul class="icons">
                     <li class="somedia">
-                      <svg width="10.28" height="10.28">
-                        <use href="../images/icons.svg#icon-instagram"></use>
-                      </svg>  
-                    </li>
-                    <li class="somedia">
-                      <svg width="20" height="16.25">
-                        <use href="../images/icons.svg/icon-twitter"></use>
-                      </svg>  
-                    </li>
-                    <li class="somedia">
-                      <svg width="10" height="20">
-                        <use href="../images/icons.svg#icon-facebook"></use>
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>  
                     </li>
                     <li class="somedia">
                       <svg width="20" height="20">
-                        <use href="../images/icons.svg/icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>  
                     </li>
                   </ul> 
@@ -252,23 +252,23 @@
                 <div class="somedia-box">  
                   <ul class="icons">
                     <li class="somedia">
-                      <svg width="10.28" height="10.28">
-                        <use href="../images/icons.svg#icon-instagram"></use>
-                      </svg>  
-                    </li>
-                    <li class="somedia">
-                      <svg width="20" height="16.25">
-                        <use href="../images/icons.svg/icon-twitter"></use>
-                      </svg>  
-                    </li>
-                    <li class="somedia">
-                      <svg width="10" height="20">
-                        <use href="../images/icons.svg#icon-facebook"></use>
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>  
                     </li>
                     <li class="somedia">
                       <svg width="20" height="20">
-                        <use href="../images/icons.svg/icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>  
                     </li>
                   </ul> 
@@ -290,23 +290,23 @@
                 <div class="somedia-box"> 
                   <ul class="icons">
                     <li class="somedia">
-                      <svg width="10.28" height="10.28">
-                        <use href="../images/icons.svg#icon-instagram"></use>
-                      </svg>  
-                    </li>
-                    <li class="somedia">
-                      <svg width="20" height="16.25">
-                        <use href="../images/icons.svg/icon-twitter"></use>
-                      </svg>  
-                    </li>
-                    <li class="somedia">
-                      <svg width="10" height="20">
-                        <use href="../images/icons.svg#icon-facebook"></use>
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>  
                     </li>
                     <li class="somedia">
                       <svg width="20" height="20">
-                        <use href="../images/icons.svg/icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>  
+                    </li>
+                    <li class="somedia">
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>  
                     </li>
                   </ul> 
@@ -324,32 +324,32 @@
         <ul class="icons-clients">
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href="../images/icons.svg#icon-client-1"></use>
+              <use href="./images/icons.svg#icon-client-1"></use>
             </svg>  
           </li>
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href="../images/icons.svg#icon-client-2"></use>
+              <use href="./images/icons.svg#icon-client-2"></use>
             </svg>  
           </li>
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href="../images/icons.svg#icon-client-3"></use>
+              <use href="./images/icons.svg#icon-client-3"></use>
             </svg>  
           </li>
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href="../images/icons.svg/icon-client-4"></use>
+              <use href=".images/icons.svg#icon-client-4"></use>
             </svg>  
           </li>
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href="../images/icons.svg#icon-client-5"></use>
+              <use href="./images/icons.svg#icon-client-5"></use>
             </svg>  
           </li>
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href="../images/icons.svg/icon-client-6"></use>
+              <use href=".images/icons.svg#icon-client-6"></use>
             </svg>  
           </li>
           </ul>
@@ -373,23 +373,23 @@
         <p class="joinus">DOŁĄCZ DO NAS</p>
         <ul class="icons">
           <li class="somedia-footer">
-            <svg width="10.28" height="10.28">
-              <use href="../images/icons.svg#icon-instagram"></use>
-            </svg>  
-          </li>
-          <li class="somedia-footer">
-            <svg width="20" height="16.25">
-              <use href="../images/icons.svg/icon-twitter"></use>
-            </svg>  
-          </li>
-          <li class="somedia-footer">
-            <svg width="10" height="20">
-              <use href="../images/icons.svg#icon-facebook"></use>
+            <svg width="20" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
             </svg>  
           </li>
           <li class="somedia-footer">
             <svg width="20" height="20">
-              <use href="../images/icons.svg/icon-linkedin"></use>
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>  
+          </li>
+          <li class="somedia-footer">
+            <svg width="20" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>  
+          </li>
+          <li class="somedia-footer">
+            <svg width="20" height="20">
+              <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>  
           </li>
         </ul>
