--- a/portfolio.html
+++ b/portfolio.html
@@ -224,23 +224,23 @@
           <p class="joinus">DOŁĄCZ DO NAS</p>
           <ul class="icons">
             <li class="somedia-footer">
-              <svg width="10.28" height="10.28">
+              <svg width="20" height="20">
                 <use href="../images/icons.svg#icon-instagram"></use>
               </svg>  
             </li>
             <li class="somedia-footer">
-              <svg width="20" height="16.25">
-                <use href="../images/icons.svg/icon-twitter"></use>
+              <svg width="20" height="20">
+                <use href="../images/icons.svg#icon-twitter"></use>
               </svg>  
             </li>
             <li class="somedia-footer">
-              <svg width="10" height="20">
+              <svg width="20" height="20">
                 <use href="../images/icons.svg#icon-facebook"></use>
               </svg>  
             </li>
             <li class="somedia-footer">
               <svg width="20" height="20">
-                <use href="../images/icons.svg/icon-linkedin"></use>
+                <use href="../images/icons.svg#icon-linkedin"></use>
               </svg>  
             </li>
           </ul>
