--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <h2 class="clients">Nasi klienci</h2>
         <ul class="icons-clients">
           <li class="icon-border">
-            <svg width="170" height="92">
+            <svg class="icon-border" width="170" height="92">
               <use href="./images/icons.svg#icon-client-1"></use>
             </svg>  
           </li>
@@ -339,7 +339,7 @@
           </li>
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href=".images/icons.svg#icon-client-4"></use>
+              <use href="./images/icons.svg#icon-client-4"></use>
             </svg>  
           </li>
           <li class="icon-border">
@@ -349,7 +349,7 @@
           </li>
           <li class="icon-border">
             <svg width="170" height="92">
-              <use href=".images/icons.svg#icon-client-6"></use>
+              <use href="./images/icons.svg#icon-client-6"></use>
             </svg>  
           </li>
           </ul>
