--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <h2 class="clients">Nasi klienci</h2>
         <ul class="icons-clients">
           <li class="icon-border">
-            <svg class="icon-border" width="170" height="92">
+            <svg width="170" height="92">
               <use href="./images/icons.svg#icon-client-1"></use>
             </svg>  
           </li>
